--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@mui/x-tree-view": "^6.17.0",
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.4",
     "gh-pages": "^6.1.1",
     "mongodb": "^6.3.0",
@@ -27,6 +31,7 @@
     "prisma": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8",
     "swr": "^2.2.4"
   },
   "devDependencies": {
