--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-date-pickers": "^6.19.4",
     "@mui/x-tree-view": "^6.17.0",
+    "@uiw/react-color-editable-input-hsla": "^2.1.1",
+    "@uiw/react-color-wheel": "^2.1.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.4",
@@ -30,6 +33,7 @@
     "passport": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4"
   },
@@ -37,10 +41,14 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
+    "daisyui": "^4.7.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
 }
