--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-date-pickers": "^6.19.4",
     "@mui/x-tree-view": "^6.17.0",
+    "@uiw/react-color-colorful": "^2.3.0",
     "@uiw/react-color-editable-input-hsla": "^2.1.1",
-    "@uiw/react-color-wheel": "^2.1.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.4",
